# adb-cli-rust

./: Cargo.toml  README.md
src/: main.rs
