[package]
name = "adb-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "adb"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
subprocess = "0.2"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
